# rakornas-email

./: .env-example  Cargo.toml
src/: main.rs  paths.rs
src/handler/: email.rs  kantor.rs  mod.rs
