[package]
name = "api"
version = "0.1.0"
authors = ["yudhi kusuma <yudhie123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = [ "attributes" ] }
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres", "bigdecimal", "chrono" ] }
futures = "0.3"
tide = "0.16.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
dotenv = "0.15"
json = "0.12.4"
sqlx-core = "0.5.1"